   * test.Rnw, report.Rnw: switch to using changepage style instead of chngpage
   * Misc: use gsub instead of translate()
   * survReport: added aehaz argument, fixed caption for when differences don't apply (no strata)
   * startPlot: ignored non-par parameters in ...
   * survReport: changed default y.n.risk to 0 (used if what='1-S')
   * exReport: added short caption when using app


Changes in version 0.5-2 (2014-11-21)
   * accrualReport: axis.Date was not positioning axis labels containing only 4-digit years at Jan 1 so wrote customized axisDate function
   * Better escaping of special characters
   * dReport: handle special characters in table captions
   * dReport: added append=TRUE in call to latex() for proportions
   * exReport: added apptail argument for appendix table of IDs
   * All functions: checked that panel and subpanel containing only legal LaTeX macro name characters (A-Z a-z -); . are auto-removed

Changes in version 0.5-1 (2014-04-15)
   * survReport: changed to use npsurv instead of survfit.formula
	 * exReport: changed order of output so that analysis of randomized patients marked for exclusions appears last; use LaTeX chngpage package to allow detailed table to go into left margin so as to be centered on page
   * exReport: added adjustwidth argument
	 * accrualReport: allowed enrollment target N to be omitted
   * exReport: fine tuning
   * nriskReport: new report to show number of subjects still being followed at each day
	 * Merge: added support for data.table
   * nriskReport: added id() variable
   * exReport: fixed bug when there is an exclusion with 0 frequency
   * accrualReport: improved graphics formatting, added minrand argument
   * accrualReport: added enrollmax argument, clarified notation
   * exReport: added ignoreExcl, ignoreRand arguments
   * all: added greportOption texwhere; default is 'gentex'; can specify texwhere='' to write non-appendix LaTeX code to console as for knitr